--- a/answers/yenlin/advR_2_Subsetting.Rmd
+++ b/answers/yenlin/advR_2_Subsetting.Rmd
@@ -63,10 +63,15 @@ It sets NA values in df to 0.
 #####1. Given a linear model, e.g., `mod <- lm(mpg ~ wt, data = mtcars)`, extract the residual degrees of freedom. Extract the R squared from the model summary (summary(mod))
 
 Ans:
+```{r}
+fn_residual_df <- function(mod) {
+  mod$df.residual
+}
 
-mod$df.residual
-
-summary(mod)$r.squared
+fn_r_square <- function(mod) {
+  summary(mod)$r.squared
+}
+```
 
 
 #
