--- a/answers/yenlin/End_to_End_Workflow_Simulation.Rmd
+++ b/answers/yenlin/End_to_End_Workflow_Simulation.Rmd
@@ -132,9 +132,8 @@ table(iris$Species)
 #####Exercise 1. Write a multi-column transformation that accepts a dataframe and a string, and concatenates two character columns into one column using the string as the separator. For example, if the input columns were c("a", "b", "c") and c("d", "e", "f") and the separator was ".", the output would be c("a.d", "b.e", "c.f"). (Hint: Use paste as the input to the multi_column_transformation)
 
 ```{r}
-df <- matrix(rep(letters[1:6], 3), nrow = 3, ncol = 6, byrow = TRUE)
-df <- data.frame(df)
-colnames(df) <- c(letters[1:6]); df
+df <- data.frame(t(replicate(3, letters[1:6])))
+names(df) <- letters[1:6]; df
 
 # create one column
 df1 <- df
@@ -146,6 +145,13 @@ concatene_char_col1(df1,
 )                  
 df1
 
+# create multiple columns
+list_a <- list(c("a", "d"), c("b", "e"), c("c", "f"))
+for (i in seq_along(list_a)) {
+  concatene_char_col1(df1, 
+                      c(list_a[[i]][1], list_a[[i]][2]),
+                      paste(list_a[[i]][1], list_a[[i]][2], sep = "."))
+}
 ```
 
 
