--- a/answers/yenlin/advR_7_Functional.Rmd
+++ b/answers/yenlin/advR_7_Functional.Rmd
@@ -104,15 +104,23 @@ unlist(lapply(bootstraps_outputs, rsq))
 ```{r}
 df <- data.frame(replicate(3, runif(5, 0, 1)))
 
-
+vapply(df, sd, numeric(1))
 ```
 
-
+#
 #####b. Compute the standard deviation of every numeric column in a mixed data frame. (Hint: you’ll need to use vapply() twice.)
+```{r}
+df <- cbind(df, X4 = letters[1:5])
+
+#vapply(df, is.numeric, logical(1))
+vapply(df[vapply(df, is.numeric, logical(1))], sd, numeric(1))
+```
 
 
 #
 #####2. Why is using sapply() to get the class() of each element in a data frame dangerous?
+
+Ans: Because sapply() will return the result as a list without sending a warning or error message.
 
 
 #
@@ -123,6 +131,8 @@ trials <- replicate(
   t.test(rpois(10, 10), rpois(7, 10)),
   simplify = FALSE
 )
+
+sapply(trials, function(x) x$p.value)
 ```
 
 #####Extra challenge: get rid of the anonymous function by using [[ directly.
@@ -131,17 +141,46 @@ trials <- replicate(
 #
 #####4. What does replicate() do? What sort of for loop does it eliminate? Why do its arguments differ from lapply() and friends?
 
+Ans: replicate() repeatly evaluates an expression. Its arguments differ from `lapply()` and friends since the same expression is evaluated repeatedly, such that there are no arguments given to it.
+
 
 #
 #####5. Implement a version of lapply() that supplies FUN with both the name and the value of each component.
+```{r}
+lapply3 <- function(x, f, ...) {
+  out <- vector("list", length(x))
+  names(out) <- names(x)
+  for (i in names(x)) {
+    out[[i]] <- f(i, x[[i]], ...)
+  }
+  out
+}
+```
 
 
 #
 #####6. Implement a combination of Map() and vapply() to create an lapply() variant that iterates in parallel over all of its inputs and stores its outputs in a vector (or a matrix). What arguments should the function take?
+```{r}
+lapply4 <- function(x, f, FUN.VALUE, ...) {
+  vapply(x, Map(f, ...), FUN.VALUE)
+}
+```
 
 
 #
 #####7. Implement mcsapply(), a multicore version of sapply(). Can you implement mcvapply(), a parallel version of vapply()? Why or why not?
+```{r}
+# example in book
+sapply2 <- function(x, f, ...) {
+  res <- lapply2(x, f, ...)
+  simplify2array(res)
+}
+
+mcsapply2 <- function(x, f, ...) {
+  res <- mclapply2(x, f, ...)
+  simplify2array(res)
+}
+```
 
 
 
@@ -151,15 +190,45 @@ trials <- replicate(
 #
 #####1. How does apply() arrange the output? Read the documentation and perform some experiments.
 
-Ans:
+Ans: Vy the margin given, it iteratively arranges the output as a vector.
 
 
 #
 #####2. There’s no equivalent to split() + vapply(). Should there be? When would it be useful? Implement one yourself.
 
+Ans: 
+This would be useful when data is heterogeneous. For the implication, you could use `split()`, followed by `vapply()`, which is similar as `tapply()`:
+```{r}
+pulse <- round(rnorm(22, 70, 10 / 3)) + rep(c(0, 5), c(10, 12))
+group <- rep(c("A", "B"), c(10, 12))
+
+
+split_vapply <- function(x, group_index, FUN, FUN.VALUE, ...) {
+  vapply(split(x, group_index), FUN, FUN.VALUE, ...)
+}
+
+split_vapply(pulse, group, mean, numeric(1))
+
+tapply(pulse, group, mean)
+```
+
+
 
 #
 #####3. Implement a pure R version of split(). (Hint: use unique() and subsetting.) Can you do it without a for loop?
+```{r}
+split2 <- function(x, group_index) {
+  groups <- unique(group_index)
+  output <- vector("list", length(groups))
+  names(output) <- levels(groups)
+  for (i in seq_along(groups)) {
+    output[[i]] <- x[group_index == groups[i]]
+  }
+    return(output)
+}
+
+split2(pulse, group)
+```
 
 
 #
@@ -174,17 +243,77 @@ Ans:
 #
 #####1. Why isn’t is.na() a predicate function? What base R function is closest to being a predicate version of is.na()?
 
+Ans: Because `is.na()` outputs a logical vector that has equal length to the length of the input. However, a predicate function returns a signle logical output.
+
 
 #
 #####2. Use Filter() and vapply() to create a function that applies a summary statistic to every numeric column in a data frame.
+```{r}
+num_stat <- function(df, fun) {
+  vapply(Filter(is.numeric, df), fun, numeric(1))
+}
+
+df <- data.frame(x = 1:3, y = c("a", "b", "c"))
+num_stat(df, mean)
+```
 
 
 #
 #####3. What’s the relationship between which() and Position()? What’s the relationship between where() and Filter()?
 
+```{r}
+# is.prime()
+is.divisor <- function(a, x) {x %% a == 0}
+is.prime <- function (x) {length(Filter(function (a) {is.divisor(a, x)}, 1:x)) == 2}
+
+x <- 10:20
+
+# which() vs Position()
+Position(is.prime, x)
+which(sapply(x, is.prime))[1]
+```
+Ans: `which(fn(x))[1] == Position(fn, x)`
+
+
+```{r}
+# where()
+where <- function(f, x) {
+  vapply(x, f, logical(1))
+}
+
+
+# where() vs Filter()
+Filter(is.prime, x)
+x[where(isTRUE, sapply(x, is.prime))]
+```
+Ans: `x[where(x, fn)] == Filter(fn, x)`
+
 
 #
 #####4. Implement Any(), a function that takes a list and a predicate function, and returns TRUE if the predicate function returns TRUE for any of the inputs. Implement All() similarly.
+```{r}
+Any <- function(x, FUN, ...) {
+  for(i in seq_along(x)) {
+    if(FUN(x[[i]], ...)) return(TRUE)
+    }
+    return(FALSE)
+}
+
+test <- list(1, 2, 3, 4, "b")
+Any(test, is.character)
+```
+
+```{r}
+All <- function(x, FUN, ...) {
+  for(i in seq_along(x)) {
+    if(!(FUN(x[[i]], ...))) return(FALSE)
+    }
+    return(TRUE)
+}
+
+test <- list(1, 2, 3, 4, "b")
+All(test, is.character)
+```
 
 
 #
@@ -197,6 +326,22 @@ Ans:
 
 #
 #####1. Implement arg_max(). It should take a function and a vector of inputs, and return the elements of the input where the function returns the highest value. For example, arg_max(-10:5, function(x) x ^ 2) should return -10. arg_max(-5:5, function(x) x ^ 2) should return c(-5, 5). Also implement the matching arg_min() function.
+```{r}
+
+arg_max <- function(x, f) x[f(x) %in% max(f(x))]
+
+arg_min <- function(x, f) x[f(x) %in% min(f(x))]
+
+
+# arg_max(-10:5, function(x) x ^ 2) should return -10
+arg_max(-10:5, function(x) x ^ 2)
+
+# arg_max(-5:5, function(x) x ^ 2) should return c(-5, 5)
+arg_max(-5:5, function(x) x ^ 2)
+arg_min(-5:5, function(x) x ^ 2)
+```
+
+. . 
 
 #####2. Challenge: read about the fixed point algorithm. Complete the exercises using R.
 
@@ -207,24 +352,73 @@ Ans:
 ####Exercises - Loops that should be left as is
 
 #
-#####1. Implement smaller and larger functions that, given two inputs, return either the smaller or the larger value. Implement na.rm = TRUE: what should the identity be? (Hint: smaller(x, smaller(NA, NA, na.rm = TRUE), na.rm = TRUE) must be x, so smaller(NA, NA, na.rm = TRUE) must be bigger than any other value of x.) Use smaller and larger to implement equivalents of min(), max(), pmin(), pmax(), and new functions row_min() and row_max().
+#####1. Implement `smaller` and `larger` functions that, given two inputs, return either the smaller or the larger value. Implement na.rm = TRUE: what should the identity be? (Hint: smaller(x, smaller(NA, NA, na.rm = TRUE), na.rm = TRUE) must be x, so smaller(NA, NA, na.rm = TRUE) must be bigger than any other value of x.) Use smaller and larger to implement equivalents of `min()`, `max()`, `pmin()`, `pmax()`, and new functions `row_min()` and `row_max()`.
+```{r}
+rm_na <- function(x, y, identity) {
+  if (is.na(x) && is.na(y)) {
+    identity
+  } else if (is.na(x)) {
+    y
+  } else {
+    x
+  }
+}
+
+smaller <- function(x, y, na.rm = FALSE) {
+  if (na.rm && (is.na(x) || is.na(y))) rm_na(x, y, Inf) 
+  else {
+    if (x > y) y
+    else x
+  }
+}
+
+larger <- function(x, y, na.rm = FALSE) {
+  if (na.rm && (is.na(x) || is.na(y))) rm_na(x, y, -Inf) 
+  else {
+    if (x > y) x
+    else y
+  }
+}
+
+# min()
+min2 <- function(..., na.rm = TRUE) Reduce(function(x, y) smaller(x, y, na.rm = na.rm), list(...), init = Inf)
+
+# max()
+max2 <- function(..., na.rm = TRUE) Reduce(function(x, y) larger(x, y, na.rm = na.rm), list(...))
+
+# pmin()
+pmin2 <- function(x, na.rm = TRUE) simplify2array(Map(min2, x, na.rm = na.rm))
+
+# pmax()
+pmax2 <- function(x, na.rm = TRUE) simplify2array(Map(max2, x, na.rm = na.rm))
+
+# row_min()
+row_min <- function(df, na.rm = TRUE) apply(df, 1, min2)
+
+# row_max()
+row_max <- function(df, na.rm = TRUE) apply(df, 1, max2)
+```
 
 
 #
-#####2. Create a table that has and, or, add, multiply, smaller, and larger in the columns and binary operator, reducing variant, vectorised variant, and array variants in the rows.
+#####2. Create a table that has **and**, **or**, **add**, **multiply**, **smaller**, and **larger** in the columns and binary operator, reducing variant, vectorised variant, and array variants in the rows.
+
+#####a. Fill in the cells with the names of base R functions that perform each of the roles.
+
+#####b. Compare the names and arguments of the existing R functions. How consistent are they? How could you improve them?
+
+#####c. Complete the matrix by implementing any missing functions.
+
+|                    |    and     |     or     |    add     |  multiply  |  smaller   |   larger   |
+|-------------------:|-----------:|-----------:|-----------:|-----------:|-----------:|-----------:|
+| binary operator    |   `&&`     |   `||`     |    `+`     |   `*`      |   `<`      |   `>`      |
+| reducing variant   |   `and`    |   `or`     |    `sum`   |   `prod`   |   `min`    |   `max`    |
+| vectorised variant |            |            |            |            |            |            |
+| array variant      |            |            |            |            |            |            |
+
+ 
 
 
 #
-#####3. Fill in the cells with the names of base R functions that perform each of the roles.
+#####3. How does paste() fit into this structure? What is the scalar binary function that underlies paste()? What are the sep and collapse arguments to paste() equivalent to? Are there any paste variants that don’t have existing R implementations?
 
-
-#
-#####4. Compare the names and arguments of the existing R functions. How consistent are they? How could you improve them?
-
-
-#
-#####5. Complete the matrix by implementing any missing functions.
-
-
-#
-#####6. How does paste() fit into this structure? What is the scalar binary function that underlies paste()? What are the sep and collapse arguments to paste() equivalent to? Are there any paste variants that don’t have existing R implementations?
