--- a/answers/yenlin/End_to_End_Workflow_Simulation.Rmd
+++ b/answers/yenlin/End_to_End_Workflow_Simulation.Rmd
@@ -20,8 +20,10 @@ Ans:
 Indicators: avant-analytics/lib/indicators/ 
 
 mungebits: avant-analytics/lib/mungebits/ 
+           avant-analytics/lib/shared/
 
 models: avant-analytics/lib/classifiers/
+        avant-analytics/lib/shared/
 
 #
 #####What is the source of data when both an s3key and data sources are specified in the import stage?
@@ -195,4 +197,8 @@ dim(iris)
 ```
 
 
+list( 
+  list(column_transformation( function(x) { inputs$levels <<- levels(x); x }, mutating = TRUE), 
+       column_transformation(function(x) { x <- factor(x, levels = inputs$levels); x }, mutating = TRUE)
+  ), is.factor )
 
