--- a/answers/yenlin/Domain_Knowledge_SQL.Rmd
+++ b/answers/yenlin/Domain_Knowledge_SQL.Rmd
@@ -105,33 +105,30 @@ where lower(first_name) like 's%') as a
 
 #
 #####5. On what date did we break $100MM in total principal funded?
+
 ```
 run_query("
-select t1.funding_date, t1.amount_cents, sum(t2.amount_cents) as cumulative_principal_funded
-from 
-  (select l.funding_date, l.amount_cents
-  from loans l
-  order by l.funding_date) as t1
-inner join 
-  (select l.funding_date, l.amount_cents
-  from loans l
-  order by l.funding_date) t2
-on t1.funding_date <= t2.funding_date
-group by t1.funding_date, t1.amount_cents
-order by t1.funding_date
+select * from
+  (select id, 
+          funding_date, 
+          amount_cents, 
+          sum(amount_cents) over (order by id, funding_date) as principal_issued_cents
+  from loans 
+  order by id, funding_date
+  ) A
+where principal_issued_cents >= 100000000 
+order by id, funding_date
 limit 5
 ")
 ```
 
 ```
-   funding_date amount_cents principal_issued_dollars
-1    2014-05-01       320000               1410152408
-2    2014-05-01       250000               1410402408
-3    2014-05-01       760000               1411162408
-4    2014-05-01       250000               1411412408
-5    2014-05-01       104000               1411516408
+     id funding_date amount_cents principal_issued_cents
+1 10441   2013-02-22       200000              100155000
+2 10442   2013-02-22       100000              100255000
+3 10443   2013-02-22       100000              100355000
+4 10444   2013-02-22       300000              100655000
+5 10445   2013-02-22       120000              100775000
 ```
 
-We broke $100MM in total principal funded on 5/1/2014.
-
-
+We broke $100MM in total principal funded on 2/22/2013.
